@@ -1,5 +1,5 @@
 #
-# SNMPTT v1.1 Configuration File
+# SNMPTT v1.2beta1 Configuration File
 #
 # Linux / Unix
 #
