@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERT v1.2beta
+# SNMPTTCONVERT v1.2beta1
 #
 # Copyright 2002-2006 Alex Burger
 # alex_b@users.sourceforge.net
