@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERTMIB v1.2beta
+# SNMPTTCONVERTMIB v1.2beta1
 #
 # Copyright 2002-2006 Alex Burger
 # alex_b@users.sourceforge.net
@@ -50,7 +50,7 @@ my $prepend_type = 1;
 #############################################################################
 #
 
-my $snmpttconvertmib_version = "v1.2beta";
+my $snmpttconvertmib_version = "v1.2beta1";
 
 sub showversion
 {
